--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,7 @@
             "email": "pedro@naroga.com.br"
         }
     ],
-    "require": {}
+    "require": {
+        "guzzlehttp/guzzle": "~6.0"
+    }
 }
