--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
             "email": "pedro@naroga.com.br"
         }
     ],
-    "require": {
+    "require-dev": {
+        "satooshi/php-coveralls": "dev-master",
+        "phpunit/php-code-coverage": "^3",
+        "phpunit/phpunit": "5.0.*"
     },
     "autoload": {
         "psr-4": {
