--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ script:
     - mkdir -p build/logs
     - chmod 777 build/logs
     - cp phpunit.xml.dist phpunit.xml
-    - php vendor/bin/phpunit --bootstrap app/bootstrap.php.cache --coverage-clover build/logs/clover.xml -c app/phpunit.xml src/
+    - php vendor/bin/phpunit --bootstrap vendor/autoload.php --coverage-clover build/logs/clover.xml -c phpunit.xml ./
 after_script:
     - php vendor/bin/coveralls -v
