--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,3 +1,7 @@
+parameters:
+    elasticsearch.client:
+        base_uri: localhost:9200
+
 services:
 
     naroga.search.filter.remove_prepositions:
@@ -5,10 +9,16 @@ services:
 
     naroga.search.engine.pdo:
         class: Naroga\SearchBundle\Engine\PDOSearch
-        arguments:
-            - @doctrine.orm.default_entity_manager
-            - [ @naroga.search.filter.remove_prepositions ]
+        arguments: [ "@doctrine.orm.default_entity_manager", "@naroga.search.filter.remove_prepositions" ]
+
+    naroga.search.engine.elasticsearch.client:
+        class: GuzzleHttp\Client
+        arguments: [ "%elasticsearch.client%" ]
+
+    naroga.search.engine.elasticsearch:
+        class: Naroga\SearchBundle\Engine\ElasticSearch
+        arguments: [ "localhost:9200", "file", "@jms_serializer", "@naroga.search.engine.elasticsearch.client"]
 
     naroga.search:
         class: Naroga\SearchBundle\Search\Search
-        arguments: [@naroga.search.engine.pdo]
+        arguments: [ "@naroga.search.engine.elasticsearch" ]
