Tried to fix more stuff on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ install:
     - composer install
 script:
     - cp phpunit.xml.dist phpunit.xml
-    - php vendor/bin/phpunit --bootstrap vendor/autoload.php -c phpunit.xml ./
+    - phpunit
