--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -21,6 +21,7 @@
             <directory>./</directory>
             <exclude>
                 <directory>./Tests/</directory>
+                <directory>./Command/</directory>
                 <directory>./vendor</directory>
             </exclude>
         </whitelist>
